--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  nameLstring: MyString
+  name: MyString
   email: MyString
 
 two:
-  nameLstring: MyString
+  name: MyString
   email: MyString
